@@ -1,4 +1,7 @@
 2009-01-19 Nicolas Roard <nicolas@roard.com>
+	Revert changes from r4269 (LKMessageSend prettyprint method in objc)
+
+2009-01-19 Nicolas Roard <nicolas@roard.com>
 	Make CodeMonkey work with the new LK organisation (without SmalltalkKit)
 	* wrote a loading function in main.m
 	* modified files to remove SmalltalkKit includes
